# aniravi24.github.io

./: .gitignore  .prettierignore  404.html  CNAME  README.md  about.rst  aniravi24-github-io.cabal  astro.config.mjs  contact.markdown  eslint.config.mjs  feed.xml  gatsby-config.js  globals.d.ts  index.html  index.markdown  index.txt  mdx-components.tsx  next-sitemap.config.js  next.config.mjs  package.json  package.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  posts.html  posts.txt  renovate.json  site.hs  sitemap-0.xml  sitemap-index.xml  sitemap.xml  tailwind.config.js  theme.config.tsx  tsconfig.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
_pagefind/: pagefind-entry.json  pagefind.en_10e050e8a1.pf_meta  pagefind.en_1bdaae7333.pf_meta  pagefind.en_235d3b988b.pf_meta  pagefind.en_2db545f297.pf_meta  pagefind.en_36845fa533.pf_meta  pagefind.en_3e60a24247.pf_meta  pagefind.en_43f05d6145.pf_meta  pagefind.en_484cd529f1.pf_meta  pagefind.en_4c9c58c514.pf_meta  pagefind.en_5e6c1da2cc.pf_meta  pagefind.en_63ca3f7c82.pf_meta  pagefind.en_702eb11070.pf_meta  pagefind.en_7b3573bbc7.pf_meta  pagefind.en_84fd3f579c.pf_meta  pagefind.en_8a2e7c6fda.pf_meta  pagefind.en_9175c0884d.pf_meta  pagefind.en_a3452812d6.pf_meta  pagefind.en_a57363a353.pf_meta  pagefind.en_a7676f115e.pf_meta  pagefind.en_adc4df99f7.pf_meta  pagefind.en_b027f52b58.pf_meta  (+9 more)
(+2225 files in other folders)
