name:                aniravi24-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aniravi24-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              Ani Ravi
maintainer:          example@example.com
copyright:           2021 Ani Ravi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable aniravi24-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
